--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <!-- Extra CSS -->
 <link rel="stylesheet" href="assets/css/theme1bce.css?ver=1930">
 
-<meta property="og:image" content="https://metatokens.financial/public/Untitled-131.png"/>
+<meta property="og:image" content="./linkedin-background-mf7326vgxuzuif8l.jpg"/>
 
 <meta property="og:title" content="The LINKEDIN token is already on pre-sale!"/>
 
