--- a/index.html
+++ b/index.html
@@ -759,7 +759,7 @@
                                     <li class="animated" data-animate="fadeInUp" data-delay=".3">
                                         <em class="contact-icon fas fa-envelope"></em>
                                         <div class="contact-text">
-                                            <span style="color: #0a66c2;">sales@nvidiatoken.com</span>
+                                            <span style="color: #0a66c2;">sales@linkedintoken.com</span>
                                         </div>
                                     </li>
                                   
